test/controlplane/policies/k8s/v1.20/state1.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"knp-default-allow-egress","namespace":"policy1"},"spec":{"egress":[{}],"podSelector":{},"policyTypes":["Egress"]}}
    creationTimestamp: "2022-08-03T14:33:33Z"
    generation: 1
    name: knp-default-allow-egress
    namespace: policy1
    resourceVersion: "766"
    uid: bfe85d53-8237-4220-ac3c-1ac23b563cac
  spec:
    egress:
    - {}
    podSelector: {}
    policyTypes:
    - Egress
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
