test/controlplane/policies/k8s/v1.20/state2.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"knp-default-allow-ingress","namespace":"policy2"},"spec":{"ingress":[{}],"podSelector":{},"policyTypes":["Ingress"]}}
    creationTimestamp: "2022-08-03T14:33:33Z"
    generation: 1
    name: knp-default-allow-ingress
    namespace: policy2
    resourceVersion: "772"
    uid: d4e4432a-d0bd-4d79-be47-c22cb2ecd99a
  spec:
    ingress:
    - {}
    podSelector: {}
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
