test/controlplane/policies/k8s/v1.20/state3.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"knp-default-deny-egress","namespace":"policy3"},"spec":{"podSelector":{},"policyTypes":["Egress"]}}
    creationTimestamp: "2022-08-03T14:33:33Z"
    generation: 1
    name: knp-default-deny-egress
    namespace: policy3
    resourceVersion: "778"
    uid: 7352b261-e910-4675-91e1-9f1b0d533b7c
  spec:
    podSelector: {}
    policyTypes:
    - Egress
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
