test/controlplane/policies/k8s/v1.20/state4.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"knp-default-deny-ingress","namespace":"policy4"},"spec":{"podSelector":{},"policyTypes":["Ingress"]}}
    creationTimestamp: "2022-08-03T14:33:33Z"
    generation: 1
    name: knp-default-deny-ingress
    namespace: policy4
    resourceVersion: "785"
    uid: d76506f0-f9d7-44d9-8085-43aca7fe0f19
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
