test/controlplane/policies/k8s/v1.20/state5.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"knp-default-deny-ingress-egress","namespace":"policy5"},"spec":{"podSelector":{},"policyTypes":["Ingress","Egress"]}}
    creationTimestamp: "2022-08-03T14:33:34Z"
    generation: 1
    name: knp-default-deny-ingress-egress
    namespace: policy5
    resourceVersion: "791"
    uid: 45664b0c-9fe2-4adf-bae4-e7d87d18c48d
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
    - Egress
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
